--- a/.github/workflows/ci-chain.yml
+++ b/.github/workflows/ci-chain.yml
@@ -13,9 +13,9 @@ jobs:
       run: tests/conftest.py 
            tests/test_articles.py 
            tests/test_authentication.py
-	   tests/test_config.py
-	   tests/test_models.py
-	   tests/test_profile.py
+	   #tests/test_config.py
+	   #tests/test_models.py
+	   #tests/test_profile.py
 	
 
   Docker-build-and-push:
