--- a/.github/workflows/ci-chain.yml
+++ b/.github/workflows/ci-chain.yml
@@ -24,6 +24,6 @@ jobs:
        run: docker build . --file Dockerfile --tag image_name:$(date +%s)
 
      -name: Docker push
-      run: docker push ${{secrets.DOCKER_USERNAME}}/exercice_devops
+      run: docker push ilosim/exercice_devops
 
 
