--- a/.github/workflows/ci-chain.yml
+++ b/.github/workflows/ci-chain.yml
@@ -13,6 +13,9 @@ jobs:
       run: tests/conftest.py 
            tests/test_articles.py 
            tests/test_authentication.py
+           tests/test_config.py
+	         tests/test_models.py
+	         tests/test_profile.py
   Docker-build-and-push:
      name: Build and push Docker image to Docker Hub
      if: github.event_name == 'release'
@@ -24,6 +27,6 @@ jobs:
        run: docker build . --file Dockerfile --tag image_name:$(date +%s)
 
      -name: Docker push
-      run: docker push ilosim/exercice_devops
+      run: docker push ${{secrets.DOCKER_USERNAME}}/exercice_devops
 
 
