--- a/.github/workflows/ci-chain.yml
+++ b/.github/workflows/ci-chain.yml
@@ -8,25 +8,28 @@ on:
 
 jobs:	
   test:
-    steps:
-    - uses: actions/checkout@v1
-      run: tests/conftest.py 
-           tests/test_articles.py 
-           tests/test_authentication.py
-           tests/test_config.py
-	   tests/test_models.py
-	   tests/test_profile.py
-  Docker-build-and-push:
+   runs-on: centos:8
+   steps:
+      - uses: actions/checkout@v1
+      - run: tests/conftest.py 
+      - run: tests/test_articles.py 
+      - run: tests/test_authentication.py
+      - run: tests/test_config.py
+      - run: tests/test_models.py
+      - run: tests/test_profile.py
+  
+  docker-build-and-push:
+     runs-on: centos:8
      name: Build and push Docker image to Docker Hub
      if: github.event_name == 'release'
      steps:
-     - name: Check out the repo
-     - uses: actions/checkout@v2
+      - name: Check out the repo
+      - uses: actions/checkout@v2
 
-     - name: Build the Docker image 
-       run: docker build . --file Dockerfile --tag image_name:$(date +%s)
+      - name: Build the Docker image 
+        run: docker build . --file Dockerfile --tag image_name:$(date +%s)
 
-     -name: Docker push
-      run: docker push ${{secrets.DOCKER_USERNAME}}/exercice_devops
+      - name: Docker push
+        run: docker push ${{secrets.DOCKER_USERNAME}}/exercice_devops
 
 
