--- a/.github/workflows/ci-chain.yml
+++ b/.github/workflows/ci-chain.yml
@@ -9,6 +9,7 @@ on:
 jobs:	
   Test:
    runs-on: ubuntu-latest
+   name: run app tests
    steps:
       - uses: actions/checkout@v1
       - run: tests/conftest.py 
@@ -27,8 +28,10 @@ jobs:
       - uses: actions/checkout@v2
  
       - name: Login to DockerHub registry
-      - uses: actions/checkout@v1
-      - run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKERH_USERNAME }} --password-stdin
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKE_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }} 
       
       - name: Build the Docker image 
       - uses: actions/checkout@v1
