--- a/.github/workflows/ci-chain.yml
+++ b/.github/workflows/ci-chain.yml
@@ -26,19 +26,12 @@ jobs:
      steps:
       - name: Check out the repo
       - uses: actions/checkout@v2
- 
-      - name: Login to DockerHub registry
-      - uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKE_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }} 
-      
-      - name: Build the Docker image 
-      - uses: actions/checkout@v1
-      - run: docker build . --file Dockerfile --tag flask-app:$(date +%s)
 
       - name: Push the Docker image to Docker hub repository
-      - uses: actions/checkout@v1
-      - run: docker push ${{secrets.DOCKER_USERNAME}}/exercice_devops
+      - uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ilosim/exercice_devops
 
 
