--- a/.github/workflows/ci-chain.yml
+++ b/.github/workflows/ci-chain.yml
@@ -11,7 +11,6 @@ jobs:
    runs-on: ubuntu-latest
    name: run app tests
    steps:
-      - uses: actions/checkout@v1
       - run: tests/conftest.py 
       - run: tests/test_articles.py 
       - run: tests/test_authentication.py
@@ -25,10 +24,10 @@ jobs:
      if: github.event_name == 'release'
      steps:
       - name: Check out the repo
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Push the Docker image to Docker hub repository
-      - uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
