--- a/.github/workflows/ci-chain.yml
+++ b/.github/workflows/ci-chain.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ilosim/exercice_devops
+          registry: ilosim/exercice_devops
      
       - name: Build and push
         id: docker_build
